menu bar created

--- a/index.html
+++ b/index.html
@@ -5,9 +5,43 @@
     <link rel="stylesheet" href="css/reset.css" >
     <link rel="stylesheet" href="css/styles.css" >
     <title>Smashing Magazine</title>
+    <script src="https://kit.fontawesome.com/244d547e9d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
+      <nav  class="nav-bar">
+        <div class="menu-bar">
+        <img src="images/logo.svg" alt="logo">
+        </div>
+        <div class="menu-icon">
+         <img src="images/articles.svg" alt="Article">
+         <h2>Article</h2>
+         <p>Design & development</p>
+        </div>
+        <div class="menu-icon">
+          <img src="images/books.svg" alt="Books">
+          <h2>Books</h2>
+          <p>Physical & digital books</p>
+        </div>
+        <div class="menu-icon">
+          <img src="images/events.svg" alt="Events">
+        <h2>Events</h2>
+        <p>Conferences & workshops</p>
+        </div>
+        <div class="menu-icon">
+        <img src="images/jobs.svg" alt="Jobs">
+        <h2>Jobs</h2>
+        <p>Find jobs & employees</p>
+        </div>
+        <div class="menu-icon">
+        <img src="images/membership.svg" alt="Membership">
+        <h2>Memebrship</h2>
+        <p>Webnars & early birds</p>
+        </div>
+        <div>
+          <button><i class="fas fa-search"></i>Topics</button>
+        </div>
+      </nav>
     </header>
     <main class="">
     </main>
