modified header and used flexbox for it

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <header>
       <nav  class="nav-bar">
-        <div class="menu-bar">
-        <img src="images/logo.svg" alt="logo">
+        <div id="logo">
+          Smashing Magazine
         </div>
         <div class="menu-icon">
          <img src="images/articles.svg" alt="Article">
-         <h2>Article</h2>
+         <h2>Articles</h2>
          <p>Design & development</p>
         </div>
         <div class="menu-icon">
