created overall structure of the website, except for the footer

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" >
-    <link rel="stylesheet" href="css/reset.css" >
-    <link rel="stylesheet" href="css/styles.css" >
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto+Slab:700&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Smashing Magazine</title>
-    <script src="https://kit.fontawesome.com/244d547e9d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -44,8 +44,142 @@
       </nav>
     </header>
     <main class="">
+      <section class="top">
+        <h1>Don't Miss These Latest Articles</h1>
+        <div class="latest">Make Honest Design Work For Digital Business, With "Ethical Design Handbook"</div>
+        <div class="latest">Make Honest Design Work For Digital Business, With "Ethical Design Handbook"</div>
+        <div class="latest">Make Honest Design Work For Digital Business, With "Ethical Design Handbook"</div>
+        <div class="latest">Make Honest Design Work For Digital Business, With "Ethical Design Handbook"</div>
+      </section>
+      <section class="middle">
+        <div class="middlediv">
+          Avoid Keyboard Event-Related Bugs In Browser-Based Transliteration
+        </div>
+        <div class="middlediv">
+          Introducing Alpine.js: A Tiny JavaScript Framework
+        </div>
+        <div class="middlediv">
+          When You Find A Good Idea, Look For A Better One
+        </div>
+        
+        <div id="smashing">
+          1,651 smashing members
+          A friendly community that keeps this website alive. With books, webinars, discounts and networking — for just 1 coffee a month. Join the family.
+          Explore features →
+          Already have an account? Sign in!
+        </div>
+        <div class="middlediv">
+          When You Find A Good Idea, Look For A Better One
+        </div>
+        <div class="middlediv">
+          When You Find A Good Idea, Look For A Better One
+        </div>
+        <div class="middlediv">
+          When You Find A Good Idea, Look For A Better One
+        </div>
+        <div class="middlediv">
+          When You Find A Good Idea, Look For A Better One
+        </div>
+        <div id="smashing">
+          1,651 smashing members
+          A friendly community that keeps this website alive. With books, webinars, discounts and networking — for just 1 coffee a month. Join the family.
+          Explore features →
+          Already have an account? Sign in!
+        </div>
+        <div class="seelatest">
+          <a>SEE ALL LATEST ARTICLES</a>
+        </div>
+      </section>
+      <div class="ethicalhandbook">
+        MARCH 2020 • SHIPPING NOW
+Ethical Design Handbook:
+Leaving Dark Patterns Behind.
+With practical techniques & strategies to make honest design work for digital products. Help your business grow sustainably — without dark patterns — and comply with GDPR and CCPA.
+<button>Learn more about the book →</button>      
+      </div>
+      <div class="person_of_the_week">
+        <img src="#" alt="the person of the week">
+        <div class="break"></div>
+        <span>PERSON OF THE WEEK</span>
+        <div>Vasilis van Gemert is a lecturer at the University of Applied Science in Amsterdam where he teaches the next generation 
+        of digital designers how to design for the web — technically, aesthetically, and with accessibility in mind. 
+        Vasilis recently completed a Design Research Master program and, to raise awareness for creating truly inclusive websites, 
+        he designed tailor-made sites for and with people with real disabilities for his thesis. He shares his knowledge about web
+        design and development on his blog, in workshops, at conferences, and giving lectures at schools and meetups. 
+        Thank you for everything you do for the community, dear Vasilis!
+        </div>
+      </div>
+      <section class="communitylinks">
+        <div>
+          march 10, 2020 — Whether you want to count down to an event, visualize a fundraising campaign, show a clock or a sales counter, Rik Schennink’s open-source flip counter plugin has got you covered.
+        </div>
+        <div>
+          march 10, 2020 — Whether you want to count down to an event, visualize a fundraising campaign, show a clock or a sales counter, Rik Schennink’s open-source flip counter plugin has got you covered.
+        </div>
+        <div>
+          march 10, 2020 — Whether you want to count down to an event, visualize a fundraising campaign, show a clock or a sales counter, Rik Schennink’s open-source flip counter plugin has got you covered.
+        </div>
+        <div>
+          march 10, 2020 — Whether you want to count down to an event, visualize a fundraising campaign, show a clock or a sales counter, Rik Schennink’s open-source flip counter plugin has got you covered.
+        </div>
+        <div>
+          march 10, 2020 — Whether you want to count down to an event, visualize a fundraising campaign, show a clock or a sales counter, Rik Schennink’s open-source flip counter plugin has got you covered.
+        </div>
+        <div>
+          march 10, 2020 — Whether you want to count down to an event, visualize a fundraising campaign, show a clock or a sales counter, Rik Schennink’s open-source flip counter plugin has got you covered.
+        </div>
+        <div class="seelatest">
+          <a>SEE ALL LATEST ARTICLES</a>
+        </div>
+      </section>
+      <section class="featuredbook">
+        <span>FEATURED SMASHING BOOK</span>
+        <a>Design Systems</a>
+        <p>Meet <strong>Design Systems</strong>, a recent Smashing book
+        in which Alla Kholmatova explores how to set up an <strong>effective
+          design system</strong> to create great digital products. With common
+        traps, gotchas and lessons learned.</p>
+        <button>Table of Contents</button>
+      </section>
+      <section class="curatedposts">
+        <div class="posts">
+          <div>
+            New Front-End Challenges To Master
+          </div>
+          <div>
+            Performance Optimization & Strategy
+          </div>
+          <div>
+            Design Patterns & Checklists
+          </div>
+          <div>
+            Improving Workflow & Data Protection
+          </div>
+        </div>
+        <div class="smashingNewsletter">
+          <div>
+            <a href="https://www.smashingmagazine.com/the-smashing-newsletter/">Smashing Newsletter</a>
+            <p>
+              Imagine you wrote a beautiful song and nobody discovered it.
+              That would make any cat sad. Don't let that happen!
+            </p>
+          <button>
+            <input type="email" placeholder="Your (smashing) email">
+            <span>Subscribe</span>
+          </button>
+          </div>
+        </div>
+       <div class="seelatest">
+        <a>SEE ALL LATEST ARTICLES</a>
+       </div>
+      </section>
+
+
     </main>
-    <footer class="">
+    <footer >
+      <div>
+        BROWSE ALL SMASHING MAGAZINE TOPICS
+      </div>
     </footer>
   </body>
 </html>
