solved html validation errors and linter errors

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" >
-    <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto+Slab:700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins+Slab:700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Smashing Magazine</title>
@@ -38,7 +38,7 @@
         <h2>Membership</h2>
         <p>Webnars & early birds</p>
         </div>
-        <a href="#footer"><button class="topics whitet color2">Topics</button></a>
+        <button class="topics whitet color2">Topics</button>
         
       </nav>
     </header>
@@ -63,6 +63,7 @@
         </div>
       </section>
       <section class="middle color4 whitet">
+        <h3>Header</h3>
         <div class="middlediv color3">
           <div class="whitet">Avoid Keyboard Event-Related Bugs In Browser-Based Transliteration</div>
           <br>
@@ -124,6 +125,7 @@ With practical techniques & strategies to make honest design work for digital pr
         <div class="color3">PERSON OF THE WEEK</div>
       </div>
       <section class="communitylinks">
+        <h3>Header</h3>
         <div class="color4">
           ARTICLE
         </div>
@@ -147,6 +149,7 @@ With practical techniques & strategies to make honest design work for digital pr
         </div>
       </section>
       <section class="featuredbook color4">
+        <h3>Header</h3>
         <span>FEATURED SMASHING BOOK</span>
         <a>Design Systems</a>
         <p>Meet <strong>Design Systems</strong>, a recent Smashing book
@@ -156,6 +159,7 @@ With practical techniques & strategies to make honest design work for digital pr
         <button class="topics whitet color3">Table of Contents</button>
       </section>
       <section class="curatedposts">
+        <h3>Header</h3>
         <div class="posts whitet">
           <div>
             <br>
@@ -182,7 +186,6 @@ With practical techniques & strategies to make honest design work for digital pr
               That would make any cat sad. Don't let that happen!
             </p>
           <button id="subscribe" class="whitet">
-            <input class="color3" type="email" placeholder="">
             <span class="color3">Subscribe</span>
           </button>
           </div>
