Improved appearance of navbar and middle bar

--- a/index.html
+++ b/index.html
@@ -44,22 +44,24 @@
     </header>
     <main class="">
       <section class="top">
-        <h1 class="toptitle color5">Don't Miss These Latest Articles</h1>
+        <h1 >
+          <span class="toptitle whiteb">Don't Miss These Latest <br> Articles</span>
+        </h1>
         <div class="latest color1">
-          <div class="latop">Peter Parker <div class="wrote">wrote</div></div>
-          <div class="labottom">Make Honest Design Work For Digital Business, With "Ethical Design Handbook"</div>
+          Article
+          <div class="Go">Go</div>
         </div>
         <div class="latest color1">
-          <div class="latop">Peter Parker <div class="wrote">wrote</div></div>
-          <div class="labottom">Make Honest Design Work For Digital Business, With "Ethical Design Handbook"</div>
+          Article
+          <div class="Go">Go</div>
         </div>
         <div class="latest color1">
-          <div class="latop">Peter Parker <div class="wrote">wrote</div></div>
-          <div class="labottom">Make Honest Design Work For Digital Business, With "Ethical Design Handbook"</div>
+          Article
+          <div class="Go">Go</div>
         </div>
         <div class="latest color1">
-          <div class="latop">Peter Parker <div class="wrote">wrote</div></div>
-          <div class="labottom">Make Honest Design Work For Digital Business, With "Ethical Design Handbook"</div>
+          Article
+          <div class="Go">Go</div>
         </div>
       </section>
       <section class="middle color4 whitet">
