created 5 more colors to better comply with the TSE's requirements

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body class="color5 whitet">
     <header>
-      <nav  class="nav-bar color3">
-        <div id="logo">
+      <nav  class="nav-bar color4">
+        <div id="logo" class="color2">
           LOGO
         </div>
         <div class="menu-icon">
@@ -51,11 +51,11 @@
           Article
           <div class="Go">Go</div>
         </div>
-        <div class="latest color1">
+        <div class="latest color2">
           Article
           <div class="Go">Go</div>
         </div>
-        <div class="latest color1">
+        <div class="latest color4">
           Article
           <div class="Go">Go</div>
         </div>
