Improved sizing of some elements according to TSE's requirements, from top to middle

--- a/index.html
+++ b/index.html
@@ -67,64 +67,59 @@
       <section class="middle color4 whitet">
         <h3>Header</h3>
         <div class="middlediv color3">
-          <div class="whitet">Avoid Keyboard Event-Related Bugs In Browser-Based Transliteration</div>
+          <div class="whitet">Article</div>
+          <br>
+          <div class="middleauthor">By: <em>Author</em></div>
+        </div>
+        <div class="middlediv color4">
+          <div class="whitet">Article</div>
           <br>
           <div class="middleauthor">By: <em>Author</em></div>
         </div>
         <div class="middlediv color3">
-          <div class="whitet">Introducing Alpine.js: A Tiny JavaScript Framework</div>
-          <br>
-          <div class="middleauthor">By: <em>Author</em></div>
-        </div>
-        <div class="middlediv color3">
-          <div class="whitet">When You Find A Good Idea, Look For A Better One</div>
+          <div class="whitet">Article</div>
           <br>
           <div class="middleauthor">By: <em>Author</em></div>
         </div>
         
-        <div class="smashing color3">
-          1,651 smashing members
-          A friendly community that keeps this website alive. With books, webinars, discounts and networking — for just 1 coffee a month. Join the family.
-          Explore features →
+        <div class="smashing color2">
+          Smashing community →
         </div>
-        <div class="middlediv color3">
-          When You Find A Good Idea, Look For A Better One
+        <div class="middlediv color7">
+          Article
           <div class="middleauthor">By: <em>Author</em></div>
         </div>
-        <div class="middlediv color3">
-          When You Find A Good Idea, Look For A Better One
+        <div class="middlediv color6">
+          Article
           <div class="middleauthor">By: <em>Author</em></div>
         </div>
-        <div class="middlediv color3">
-          When You Find A Good Idea, Look For A Better One
+        <div class="middlediv color7">
+          Article
           <div class="middleauthor">By: <em>Author</em></div>
         </div>
-        <div class="middlediv color3">
-          When You Find A Good Idea, Look For A Better One
+        <div class="middlediv color6">
+          Article
           <div class="middleauthor">By: <em>Author</em></div>
         </div>
-        <div class="smashing color3">
-          1,651 smashing members
-          A friendly community that keeps this website alive. With books, webinars, discounts and networking — for just 1 coffee a month. Join the family.
-          Explore features →
-          Already have an account? Sign in!
+        <div class="smashing color2">
+          Smashing TV →
+          <br>
+          <button id="smashingtvbtn">See all upcoming episodes →</button>
         </div>
         <div id="moretwitter" class="seelatest color">
-          <a class="color3">SEE ALL LATEST ARTICLES →</a>
+          <a class="color9">SEE ALL LATEST ARTICLES →</a>
         </div>
       </section>
       <div class="ethicalhandbook color4">
-Ethical Design Handbook:
-Leaving Dark Patterns Behind.
-With practical techniques & strategies to make honest design work for digital products. Help your business grow sustainably — without dark patterns — and comply with GDPR and CCPA.
-<br>
-<button class="topics whitet color3">Learn more about the book →</button>  
-<div class="color3">HANDBOOK PICTURE</div>    
+        Ethical Design Handbook
+        <br>
+        <button class="topics whitet color3">Learn more about the book →</button>  
+        <div class="color3" id="hndpic">HANDBOOK PICTURE</div>    
       </div>
       <div class="person_of_the_week color4">
-        <div class="color3"></div>
+        <div class="color6">PICTURE</div>
         
-        <div class="color3">PERSON OF THE WEEK</div>
+        <div class="color4">PERSON OF THE WEEK</div>
       </div>
       <section class="communitylinks">
         <h3>Header</h3>
