Improved colors and size of elements from middle to bottom, according to TSE's specifications

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Smashing Magazine</title>
   </head>
-  <body class="color5 whitet">
+  <body class="color10 whitet">
     <header>
       <nav  class="nav-bar color4">
         <div id="logo" class="color2">
@@ -141,61 +141,60 @@
         <div class="color4">
           ARTICLE
         </div>
-        <div class="seelatest color3">
+        <div class="seelatest color3" id="communitytwit">
           <a>MORE LINKS ON TWITTER →</a>
         </div>
       </section>
-      <section class="featuredbook color4">
+      <section class="featuredbook color8">
         <h3>Header</h3>
-        <span>FEATURED SMASHING BOOK</span>
-        <a>Design Systems</a>
-        <p>Meet <strong>Design Systems</strong>, a recent Smashing book
-        in which Alla Kholmatova explores how to set up an <strong>effective
-          design system</strong> to create great digital products. With common
-        traps, gotchas and lessons learned.</p>
-        <button class="topics whitet color3">Table of Contents</button>
+        <div id="smashbook" class="color6">
+          <span id="smashbookspan">FEATURED SMASHING BOOK</span>
+          <button class="topics whitet color3">Table of Contents</button>
+        </div>
+
+        <div id="bookpic" class="color5">
+          BOOK PICTURE
+        </div>
+
       </section>
       <section class="curatedposts">
         <h3>Header</h3>
         <div class="posts whitet">
-          <div>
+          <div class="color6">
             <br>
-            New Front-End Challenges To Master
+            Article
           </div>
-          <div>
+          <div class="color6">
             <br>
-            Performance Optimization & Strategy
+            Article
           </div>
-          <div>
+          <div class="color6">
             <br>
-            Design Patterns & Checklists
+            Article
           </div>
-          <div>
+          <div class="color6">
             <br>
-            Improving Workflow & Data Protection
+            Article
           </div>
         </div>
         <div class="smashingNewsletter">
-          <div class="color4">
-            <a href="https://www.smashingmagazine.com/the-smashing-newsletter/">Smashing Newsletter</a>
-            <p>
-              Imagine you wrote a beautiful song and nobody discovered it.
-              That would make any cat sad. Don't let that happen!
-            </p>
-          <button id="subscribe" class="whitet">
-            <span class="color3">Subscribe</span>
+          <div class="color8">
+            <div class="color7" id="smashnewsa">Smashing Newsletter</div>
+            <div id="smashnewspic" class="color4">PICTURE</div>
+          <button id="subscribe" class="whitet color3">
+            Subscribe
           </button>
           </div>
         </div>
-       <div class="seelatest color4">
-        <a>SEE ALL ARTICLES →</a>
-       </div>
-      </section>
 
+      </section>
+        <div class="seelatest color3" id="communitytwit2">
+          <a>SEE ALL ARTICLES →</a>
+        </div>
 
     </main>
-    <footer >
-      <div class="color3">
+    <footer class="color8">
+      <div class="color5">
         BROWSE ALL SMASHING MAGAZINE TOPICS
       </div>
       <br>
@@ -237,7 +236,7 @@
         <li>Lorem</li>
         <li>Lorem</li>
       </ul>
-      <div class="color4">
+      <div class="color9">
         FOOTER BOTTOM 
       </div>
     </footer>
