Solved remaining lint errors and replaced screenshot picture and live link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="menu-icon">
         <img src="images/membership.svg" alt="Membership">
         <h2>Membership</h2>
-        <p>Webnars & early birds</p>
+        <p>Webinars & early birds</p>
         </div>
         <button class="topics whitet color2">Topics</button>
         
